2012-02-16  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* atari.[ch], cartridge.c, cfg.c, devices.c, esc.c, memory.[ch], sysrom.[ch],
  ui_basic.c, ui.c, android/jni/jni.c: Merge Atari800_MACHINE_OSA and
  Atari800_MACHINE_OSB into Atari800_MACHINE_800 - no need for separate machine
  types since OS revision can now be selected.

* sysrom.c, atari800.man, DOC/USAGE: Support choosing OS revision from command
  line.


2012-02-10  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* atari.c, cfg.[ch], crc32.[ch], sysrom.[ch], ui.c, Makefile.in,
  dc/Makefile.dc, win32/msc/Makefile, android/jni/jni.c,
  android/jni/Android.mk.in: Two new modules (crc32, sysrom) that add a new
  functionality of searching for OS/BASIC ROM images based on known CRC32
  hashes. Added possibility to select an OS/BASIC version when many are
  available ("Select System"). When switching between PAL/NTSC, NTSC or PAL
  version of OS Rev. A is selected accordingly.
  Android port updated to work correctly (OS/BASIC version selection is still
  missing though).


2012-01-27  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* xep80.c: Rename SetCursor to SetCursorMode to avoid conflict with a winuser.h
  function under MinGW.


2012-01-19  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* xep80_fonts.c, xep80.[ch], videomode.c: Rewtritten XEP80 emulation, based on
  disassembly of the XEP80 ROM. Programs such as EIGHTY.BAS from XEP80 System
  Diskette, or XEPLIST2.BAS from ANTIC Oct/1988, now work correctly.

* videomode.c: Added authenthic aspect ratio for XEP80. Fixed issue with
  1x, 2x, 3x, and "custom" stretch settings - for all videomodes except NORMAL
  the screen would stretch twice the amount it should.


2012-01-12  Kostas Nakos  <knakos@gmail.com>
* android/*: Implement state saving, fix a keymap preference corner case


2012-01-08  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* antic.c: Fix accuracy of ANTIC_CPU_CLOCK when NEW_CYCLE_EXACT is enabled.
